# spextract

./: .gitignore  README.md  pyproject.toml  setup.ini
instrument/: kimra.json  mira2.json  spectrometer.json
src/spextract/: cli.py  get_data.py  locate.py  parse.py  spextract.py
src/spextract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
